# applec

./: .gitignore  LICENSE  README.md  assembler.py  test.s.txt
assembler/: assembler-preview-not fully-working.py  assembler.py  assembler_with_gui.py  fixed_assembler.py  func.py  list.py  test.s
assembler/include/: func.h
assembler/src/: assembler.c  func.c
c-assembler/: CMakeLists.txt
